# DIGRA

./: CMakeLists.txt
apps/: build_wrapper.cpp  csv_to_data_converter.cpp  fanns_survey_helpers.cpp  global_thread_counter.h  index_construction_and_query_execution.cpp  search_wrapper.cpp
